# ProjectSnow

./: .gitignore  Cargo.toml  test.toml
src/: main.rs  parsing.rs  structs.rs
src/parsing/: toml-parser.rs
src/structs/: core.rs
src/util/: file.rs  option.rs
