[package]
name = "project-snow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.17.0-beta.1"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
tokio = { version = "1.18.2", features = ["full"] }
normpath = "0.3.2"